[workspace]
resolver = "3"
members = ["client", "common", "server", "bench"]

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
hex = "0.4.3"
opendal = "0.54.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
