[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "artifact-bench"
path = "src/main.rs"

[dependencies]
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
rand = { version = "0.9", features = ["small_rng"] }
serde = { workspace = true }
serde_json = { workspace = true }
