[package]
name = "benches"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.11.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9"
opendal = { version = "0.54.1", features = ["services-fs"] }
tempdir = "0.3.7"
tokio = { version = "1.45.1", features = ["full"] }

#[target.'cfg(unix)'.dependencies]
#sha2 = { version = "0.10.9", features = ["asm"] }

[[bench]]
name = "benchmarks"
harness = false

