[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3.0.12", features = ["json"] }
anyhow = "1.0.100"
lzma-rust2 = "0.15.1"
futures = "0.3"
opendal = { version = "0.54", features = ["services-fs"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
