[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5.40", features = ["derive", "env"] }
dirs = "6.0.0"
futures = { workspace = true }
hex = { workspace = true }
lzma-rust2 = "0.15.1"
opendal = { version = "0.54.1", features = ["services-fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { version = "3.0.12", features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
