[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
chrono = "0.4.41"
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
futures = "0.3.31"
hex = "0.4.3"
lzma-rust2 = {version = "0.15.1", features = ["std"] }
opendal = "0.54.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
itoa = "1"
sha2 = { version = "0.10.9", features = ["asm"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1"
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3"
opendal = { version = "0.54.1", features = ["services-fs"] }
