[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytes = "1.10.1"
chrono = { workspace = true }
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
futures = { workspace = true }
hex = { workspace = true }
lzma-rust2 = { version = "0.15.1", features = ["std"] }
opendal = { workspace = true }
serde = { workspace = true }
itoa = "1"
sha2 = { version = "0.10.9", features = ["asm"] }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = { version = "0.13", features = ["zstdmt"] }

[dev-dependencies]
tempfile = { workspace = true }
opendal = { version = "0.54.1", features = ["services-fs"] }
serde_json = { workspace = true }
