[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.51", features = ["derive"] }
common = { path = "../common" }
futures = "0.3.31"
futures-core = "0.3.31"
http-body = "1.0.1"
lazy_static = "1.5.0"
opendal = { version = "0.54.1", features = ["services-fs", "services-s3"] }
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec", "io"] }
tower-http = { version = "0.6.6", features = ["compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
